crates/solidity/testing/snapshots/bindings_output/using/global/v2/generated/0.7.4-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected AddressKeyword or BoolKeyword or ByteKeyword or BytesKeyword or ContractKeyword or EnumKeyword or FixedKeyword or FunctionKeyword or Identifier or ImportKeyword or IntKeyword or InterfaceKeyword or LibraryKeyword or MappingKeyword or PragmaKeyword or StringKeyword or StructKeyword or UfixedKeyword or UintKeyword.
   ╭─[counter.sol:7:1]
   │
 7 │ ╭─▶ using {increment} for Counter global;
 8 │ ├─▶ 
   │ │      
   │ ╰────── Error occurred here.
───╯

------------------------------------------------------------------------

Definitions (8):
- Def: #1 ["Counter" @ counter.sol:1:8] (struct)
- Def: #2 ["value" @ counter.sol:2:10] (struct member, type: uint256)
- Def: #3 ["increment" @ counter.sol:5:10] (function, type: function (Counter memory) returns void)
- Def: #4 ["_counter" @ counter.sol:5:35] (parameter, type: Counter memory)
- Def: #5 ["Counter" @ main.sol:1:9] (imported symbol)
- Def: #6 ["Test" @ main.sol:3:10] (contract)
- Def: #7 ["test" @ main.sol:4:14] (function, type: function (Counter memory) returns void)
- Def: #8 ["c" @ main.sol:4:34] (parameter, type: Counter memory)

------------------------------------------------------------------------

References (5):
- Ref: ["Counter" @ counter.sol:5:20] -> #1
- Ref: ["Counter" @ main.sol:1:9] -> #1
- Ref: ["Counter" @ main.sol:4:19] -> #1
- Ref: ["c" @ main.sol:5:9] -> #8
- Ref: ["increment" @ main.sol:5:11] -> unresolved

------------------------------------------------------------------------

Unbound identifiers (0):

------------------------------------------------------------------------

Bindings: 
   ╭─[counter.sol:1:1]
   │
 1 │ struct Counter {
   │        ───┬───  
   │           ╰───── name: 1
 2 │     uint value;
   │          ──┬──  
   │            ╰──── name: 2
   │ 
 5 │ function increment(Counter memory _counter) public {}
   │          ────┬──── ───┬───        ────┬───  
   │              ╰────────────────────────────── name: 3
   │                       │               │     
   │                       ╰───────────────────── ref: 1
   │                                       │     
   │                                       ╰───── name: 4
───╯

------------------------------------------------------------------------

Bindings: 
   ╭─[main.sol:1:1]
   │
 1 │ import {Counter} from "counter.sol";
   │         ───┬───  
   │            ╰───── name: 5
   │            │     
   │            ╰───── ref: 1
   │ 
 3 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 6
 4 │     function test(Counter memory c) public {
   │              ──┬─ ───┬───        ┬  
   │                ╰──────────────────── name: 7
   │                      │           │  
   │                      ╰────────────── ref: 1
   │                                  │  
   │                                  ╰── name: 8
 5 │         c.increment();
   │         ┬ ────┬────  
   │         ╰──────────── ref: 8
   │               │      
   │               ╰────── unresolved
───╯
